--- a/res/layout/cab_selection_layout.xml
+++ b/res/layout/cab_selection_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <com.example.highlightlistitempressed.PressListView
+    <com.eduzamora.android.highlightlistitemonpress.widget.PressListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
